risc0/zirgen/dsl/test/repro/map_empty_array.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s
// CHECK: error: the start of a range must be strictly less than its end

component TestMap() {
  for i : 0..0 { i + 2 }
}

